--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
   \input{01/06.tex}
   \input{01/07.tex}
   \input{01/08.tex}
-  % \input{01/09.tex}
+  \input{01/09.tex}
   % \input{01/10.tex}
   % \input{01/11.tex}
   % \input{01/12.tex}
