--- a/preamble/special.tex
+++ b/preamble/special.tex
@@ -10,3 +10,34 @@
 }
 
 \newcommand{\ar}[1]{(п.а. #1)}
+
+\definecolor{colorgreen}{rgb}{0,0.6,0}
+\definecolor{colorgray}{rgb}{0.5,0.5,0.5}
+\definecolor{colorpurple}{rgb}{0.58,0,0.82}
+\definecolor{colorbackground}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{cstyle}{
+  backgroundcolor = \color{colorbackground},   
+  commentstyle = \color{colorgreen},
+  keywordstyle = \color{magenta},
+  numberstyle = \tiny\color{colorgray},
+  stringstyle = \color{colorpurple},
+  basicstyle = \footnotesize,
+  breakatwhitespace = false,         
+  breaklines = true,                 
+  captionpos = b,                    
+  keepspaces = true,                 
+  numbers = left,                    
+  numbersep = 5pt,                  
+  showspaces = false,                
+  showstringspaces = false,
+  showtabs = false,                  
+  tabsize = 2,
+  escapechar = |,
+  language = C,
+}
+
+\lstnewenvironment{ccode}{\lstset{style = cstyle}}{}
+\newcommand{\cinline}[1]{%
+  \Colorbox{colorbackground}{\lstinline[style = cstyle]{#1}}%
+}
