--- a/01/04.tex
+++ b/01/04.tex
@@ -191,12 +191,12 @@
   будет называться монолитной.
 \end{remark}
 
-Еще одним серьезным монолитного ядра является то, что при любом изменении
-аппаратного обеспечения (и не только его) требуется перекомпиляция ядра. Даже
-когда появились решения, требующие не пересборки ядра, а лишь перезапуска ОС,
-это проблема все осталась актуальной: например, если ОС развернута на сервере,
-то ее перезапуск приведет к тому, что пользователи некоторое время не будут
-иметь доступа к серверу (что не всегда допустимо).
+Еще одним серьезным недостатком монолитного ядра является то, что при любом
+изменении аппаратного обеспечения (и не только его) требуется перекомпиляция
+ядра. Даже когда появились решения, требующие не пересборки ядра, а лишь
+перезапуска ОС, это проблема все осталась актуальной: например, если ОС
+развернута на сервере, то ее перезапуск приведет к тому, что пользователи
+некоторое время не будут иметь доступа к серверу (что не всегда допустимо).
 
 Развитием монолитного ядра стало модульное ядро. Его преимуществом является то,
 что зачастую (но не всегда) можно добавить, удалить или заменить модуль без
