--- a/01/09.tex
+++ b/01/09.tex
@@ -287,5 +287,4 @@
 семафор. Дело в том, что не всегда ресурс бывает только в двух состояниях
 (\quote{занят} или \quote{свободен}), иногда ресурс может быть частично
 занят и требуется знать, на сколько именно он занят. Для этого и существует идея
-семафоров, предложенная Дейкстрой еще в \(1965\)-ом году. А мьютекс это всего
-лишь семафор на два значения (или бинарный семафор).
+семафоров, предложенная Дейкстрой еще в \(1965\)-ом году.
